--- a/app/scss/globals/colors.scss
+++ b/app/scss/globals/colors.scss
@@ -9,7 +9,7 @@
     --light-blue-text: #0F0BC7;
     --icon-bg: #E3E2FD;
 
-    --marquee-width: 70vw;
+    --marquee-width: 90vw;
     --marquee-height: 20vh;
     /* --marquee-elements: 12; */ /* defined with JavaScript */
     --marquee-elements-displayed: 5;
